# bb-wrapper

./: .coveragerc  .env.sample  .flake8  .gitattributes  .gitignore  MANIFEST.in  Makefile  README.md  README.rst  flake.nix  mkPoetryEnv.nix  poetry2nix.nix  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements.txt  result-bin  setup.cfg  setup.py  snippet.py
.github/workflows/: pypi.yml  tests.yml
bb_wrapper/: __init__.py  _version.py  barcode_utils.py  constants.py  number_utils.py  utils.py
bb_wrapper/models/: barcode.py  boleto.py  pagamentos.py  perfis.py  pix_cob.py
bb_wrapper/services/: __init__.py  b64.py  barcode.py  barcode_cobranca.py  barcode_tributo.py  brcode.py  crc.py  dac.py  document.py  febrabran.py  mod.py  pix.py  pixcode.py  qrcode.py  unicode.py
bb_wrapper/wrapper/: __init__.py  bb.py  cobrancas.py  pagamento_lote.py  pix.py  pix_cob.py  request.py
docs/: status pix.md
docs/bb/: API_Cobranca_postman_collection_e7409199cc.json
docs/cobranca/: API_Cobranca_postman_collection_e7409199cc.json
docs/pagamentos/: erros_pagamento.md  erros_transferencia.md  status.md  status_lote.md  status_pagamento.md
docs/pix/: API_PIX_Testes_em_Homologacao_870074d082.postman_collection  README.md  swagger pix.json
examples/: README.md  connection.py  utils.py
examples/auth/: access_token.py
examples/certificates/: debug.py
examples/cobranças/: baixa_boleto.py  consulta_boleto.py  lista_boletos_1.py  lista_boletos_2.py  lista_boletos_liquidados_1.py  lista_boletos_liquidados_2.py  registra_boleto.py  registra_boleto_1.py  registra_boleto_2.py  registra_boleto_3.py  registra_boleto_4.py  registra_boleto_5.py
examples/cobranças/data/: consulta_boleto.json  lista_boletos_1.json  lista_boletos_liquidados_1.json  registra_boleto.json  registra_boleto_1.json  registra_boleto_4.json  registra_boleto_5.json
examples/data/: baixa_boleto.json  consulta_boleto.json  consultar_cobranca.json  consultar_pix.json  criar_cobrança.json  criar_cobrança_cnpj.json  criar_cobrança_expiracao.json  criar_cobrança_qrcode.json  criar_transferencia_pix.json  criar_transferencia_ted.json  lista_boletos_1.json  lista_boletos_2.json  lista_boletos_liquidados_2.json  listar_pix.json  listar_pix_2.json  registra_boleto_1.json  registra_boleto_2.json  registra_boleto_3.json  registra_boleto_4.json  registra_boleto_5.json
examples/lotes_pagamento/: cadastrar_pagamento_boleto.py  cadastrar_pagamento_tributo.py  cadastrar_transferencia_conta_pagamento.py  cadastrar_transferencia_pix.py  cadastrar_transferencia_ted.py  cancelar_pagamentos.py  consultar_pagamento_boleto.py  consultar_pagamento_tributo.py  consultar_pix.py  consultar_transferencia.py  consultar_transferencia_conta_pagamento.py  consultar_transferencia_pix.py  criar_transferencia_pix.py  criar_transferencia_ted.py  liberar_pagamentos.py  listar_pagamentos.py  resgatar_lote.py  resgatar_lote_solicitacao.py  transferencia_pix_chave_aleatoria.py  transferencia_pix_cpf.py  transferencia_pix_dados_bancario_conta_pagamento.py  transferencia_pix_dados_bancarios.py
examples/lotes_pagamento/data/: cadastrar_pagamento_boleto.json  cadastrar_pagamento_tributo.json  cadastrar_transferencia_conta_pagamento.json  cadastrar_transferencia_ted.json  cancelar_pagamentos.json  consultar_pagamento_boleto.json  consultar_pagamento_tributo.json  consultar_pix.json  consultar_transferencia.json  consultar_transferencia_conta_pagamento.json  consultar_transferencia_pix.json  criar_transferencia_ted.json  liberar_pagamentos.json  resgatar_lote.json  resgatar_lote_solicitacao.json  transferencia_pix_chave_aleatoria.json  transferencia_pix_cpf.json  (+2 more)
examples/pix/: consultar_cobranca.py  consultar_devolucao_pix.py  consultar_pix.py  criar_cobrança.py  criar_cobrança_qrcode.py  devolver_pix.py  list_pix.py  listar_pix.py
examples/pix_cob/: consultar_cobranca.py  consultar_devolucao_pix.py  consultar_pix.py  criar_cobrança.py  criar_cobrança_cnpj.py  criar_cobrança_cpf.py  criar_cobrança_expiracao.py  criar_cobrança_qrcode.py  devolver_pix.py  listar_pix.py  listar_pix_2.py  listar_pix_3_paginado.py
imobanco_bb/: constants.py  utils.py
imobanco_bb/models/: boleto.py  pagador.py
imobanco_bb/wrapper/: bb.py  cobrancas.py  request.py
scripts/: baixa_manual.py
tests/: test_barcode.py  test_our_number.py  test_qrcode.py  test_unicode.py  utils.py
tests/models/: test_barcode_cobranca.py  test_barcode_tributo.py
tests/services/: test_b64.py  test_barcode.py  test_barcode_cobranca.py  test_barcode_tributo.py  test_brcode.py  test_documento.py  test_identify_key_type.py  test_mod.py  test_pix.py  test_pixcode.py  test_qrcode.py  test_unicode.py
tests/wrapper/: test_bb_base.py  test_cobrancas.py  test_pagamentos.py  test_pix_cob.py  test_request.py
(+6 files in other folders)
