[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | env
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.coverage.report]
omit = [
	"*/env/*",
	"*/venv/*",
	"*/.venv/*",
	"*/tests/*",
	"*/examples/*",
	"*/__init__.py"
]

[tool.poetry]
name = "bb-wrapper"
version = "0.0.0"
description = "Cliente não oficial da API do Banco do Brasil"
authors = ["Imobanco"]
readme = "README.rst"
packages = [{include = "bb_wrapper/**/*.py"}]
homepage = "https://github.com/imobanco/bb-wrapper"
repository = "https://github.com/imobanco/bb-wrapper"
license = "GPLv3"

keywords = ["API", "Banco", "Brasil", "BB", "client", "wrapper"]
classifiers = [
    "Programming Language :: Python :: 3",
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Developers",
	"Environment :: Web Environment",
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
	"Natural Language :: Portuguese (Brazilian)",
	"Operating System :: OS Independent",
	"Topic :: Documentation :: Sphinx",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Internet :: WWW/HTTP :: Dynamic Content :: CGI Tools/Libraries",
	"Topic :: Utilities"
]
include = []

[tool.poetry.dependencies]
python = ">= 3.8, < 3.10"
requests = "^2.26.0"
python-decouple = "^3.4"
pydantic = ">=2.0.0"
python-barcode = "^0.15.1"
Unidecode = "^1.2.0"
qrcode = "^7.3"
crc = "^1.0.1"
pycpfcnpj = "^1.5.1"
pillow = ">=9.5.0,<=10.3.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^22.3.0"
coverage = {extras = ["toml"], version = "^5.5"}
isort = "^5.9.2"
freezegun = "^1.1.0"
responses = "^0.21.0"
py-bdd-context = ">=0.0.2"

[tool.poetry.scripts]

# poetry config --list
[virtualenvs]
virtualenvs.create = true
virtualenvs.in-project = true
virtualenvs.path = "."
